--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -1,2 +1,4 @@
-<p>User with ID _ID_ loaded.</p>
-<p>User name is _NAME_</p>
+<p>User with {{user.id}} loaded.</p>
+<p>User name is {{user.name}}</p>
+<hr>
+<a [routerLink]="['/users', 33, 'QWERTY']">Go to ID 33</a>
