--- a/src/app/servers/server/server.component.html
+++ b/src/app/servers/server/server.component.html
@@ -1,2 +1,2 @@
-<h5>{{ server.name }}</h5>
-<p>Server status is {{ server.status }}</p>
+<h5>Server name: {{ server.name }}</h5>
+<p>Server status: {{ server.status }}</p>
