--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <h4>Welcome to Server Manager 4.0</h4>
 <p>Manage your Servers and Users.</p>
 <button (click)="onLoadServers(1)" class="btn btn-primary">Load Servers 1</button>
+<button (click)="onLogin()" class="btn btn-primary">Login</button>
+<button (click)="onLogout()" class="btn btn-primary">Logout</button>
 
 
